lists api controller started
